# k2-epr-test

./: Makefile  README.md  docker-compose.yml
api/: .env.example  alembic.ini  pyproject.toml  run.py  seed.py
api/alembic/: env.py
api/alembic/versions/: 2026_05_10_1034-54238adeb18c_add_all_table.py
api/app/: main.py
api/app/core/: config.py  models.py  router.py
api/app/modules/client/: models.py  repository.py  router.py  schemas.py  services.py
api/app/modules/order/: enums.py  models.py  repository.py  router.py  schemas.py  services.py
api/app/modules/product/: models.py  repository.py  router.py  schemas.py  services.py
api/app/modules/system/: router.py
api/tests/: test_api.py
client/: .env.example  .prettierrc  components.json  nuxt.config.ts  package.json
client/app/: app.vue
client/app/assets/css/: tailwind.css
client/app/components/app/: AppFooter.vue  AppHeader.vue
client/app/components/ui/alert/: index.ts
client/app/composables/: useApi.ts  useCart.ts  utils.ts
client/app/layouts/: default.vue
client/app/pages/: clients.vue  index.vue  products.vue
client/app/pages/orders/: new.vue
client/app/plugins/: api.ts
client/app/stores/: cart.ts  errors.ts
client/app/types/: index.ts
client/app/utils/: index.ts
client/app/utils/config/: useCollectionNames.ts  useLinks.ts
client/app/utils/helpers/: date.ts
client/app/utils/services/: client.services.ts  index.ts  order.services.ts  product.services.ts
client/shared/types/: index.ts
docker/api/: Dockerfile
docker/client/: Dockerfile
(+2 files in other folders)
